icons in section 2 bug fix mobile alignment

--- a/main.css
+++ b/main.css
@@ -193,8 +193,8 @@ img {
   }
 
   img {
-    width: 100%;
-    margin-left: 100px;
+    width: 80%;
+    /* margin-left: 100px; */
   }
 
   #section1_wrapper {
